codama-macros/tests/codama_pda_helpers_derive/no_seed_attributes.fail.stderr
error: CodamaPdaHelpers requires at least one #[codama(seed(...))] attribute
 --> tests/codama_pda_helpers_derive/no_seed_attributes.fail.rs:4:12
  |
4 | pub struct Counter;
  |            ^^^^^^^
