codama-macros/tests/codama_pda_helpers_derive/no_seed_attributes.fail.rs
use codama_macros::{CodamaPda, CodamaPdaHelpers};

#[derive(CodamaPda, CodamaPdaHelpers)]
pub struct Counter;

fn main() {}
